--- a/package.json
+++ b/package.json
@@ -3,5 +3,26 @@
     "@types/node": "^14.14.5",
     "@types/react": "^16.9.53",
     "typescript": "^4.0.5"
-  }
+  },
+  "name": "nextjs-cli",
+  "description": "## nextjs page  ```shell script",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "csstype": "^3.0.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/google-microsoft/nextjs-cli.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/google-microsoft/nextjs-cli/issues"
+  },
+  "homepage": "https://github.com/google-microsoft/nextjs-cli#readme"
 }
