--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
-    "@types/node": "^14.14.5",
-    "@types/react": "^16.9.53",
-    "typescript": "^4.0.5"
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "next-translate": "^0.19.5",
+    "typescript": "^4.1.2"
   },
   "name": "nextjs-cli",
   "description": "## nextjs page  ```shell script",
