update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-cli",
+  "name": "hygen-nextjs",
   "description": "## nextjs page  ```shell script",
   "version": "1.0.0",
   "main": "index.js",
